vehicle/tests/golden/error/typing/incorrectTensorLength/incorrectTensorLength.vcl
tensor : Vector Nat 2
tensor = [1]
